# ecommbackend

./: Dockerfile  README.md  pyproject.toml  runserver.py  sql_app.db
ecommerce_backend/: main.py
ecommerce_backend/models/: Cart.py  Event.py  Order.py  Product.py  User.py  __init__.py  common.py
ecommerce_backend/repositories/: cart.py  event.py  order.py  product.py  user.py
ecommerce_backend/schemas/: cart.py  event.py  order.py  product.py  user.py
ecommerce_backend/services/: auth.py  config.py
